--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ ropey = "1"
 wasm-logger = "0.2"
 yew = "0.19"
 gloo = "0.7"
+pulldown-cmark = "0.9"
 
 [dependencies.web-sys]
 version = "0.3"
-features = ["Selection"]
+features = ["Selection", "Range"]
