--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ wasm-logger = "0.2"
 yew = "0.19"
 gloo = "0.7"
 pulldown-cmark = "0.9"
+wasm-bindgen = "0.2"
+console_error_panic_hook = "0.1"
 
 [dependencies.web-sys]
 version = "0.3"
